[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/UI/Container_Gauge/Receptacle_Gauge/receptacle_gauge.gd" type="Script" id=1]
[ext_resource path="res://World/UI/Container_Gauge/Receptacle_Gauge/gurndschrift_recepticale.tres" type="DynamicFont" id=2]
[ext_resource path="res://World/UI/Container_Gauge/Receptacle_Gauge/Receptical_Meter_Background.png" type="Texture" id=3]
[ext_resource path="res://World/UI/Container_Gauge/Receptacle_Gauge/Receptical_Meter_Outline.png" type="Texture" id=4]
[ext_resource path="res://World/UI/Container_Gauge/Receptacle_Gauge/Receptical_Meter_Progress.png" type="Texture" id=5]

[node name="Receptacle_Gauge" type="Control"]
rect_min_size = Vector2( 0, 32 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 69.0
margin_bottom = 30.0
mouse_filter = 2

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )

[node name="Element_Label" type="Label" parent="HBoxContainer/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -12.5
margin_right = 22.0
margin_bottom = 12.5
custom_fonts/font = ExtResource( 2 )
text = "Total"

[node name="TextureProgress" type="TextureProgress" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 324.0
margin_bottom = 32.0
rect_min_size = Vector2( 256, 32 )
max_value = 1.0
step = 0.01
value = 0.56
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0.501961, 0.501961, 0.501961, 1 )
tint_over = Color( 0.501961, 0.501961, 0.501961, 1 )
tint_progress = Color( 0.501961, 0.501961, 0.501961, 1 )
nine_patch_stretch = true
stretch_margin_left = 15
stretch_margin_top = 15
stretch_margin_right = 15
stretch_margin_bottom = 15

[node name="NinePatchRect2" type="NinePatchRect" parent="HBoxContainer"]
margin_left = 328.0
margin_right = 392.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 0 )

[node name="Capacity_Label" type="Label" parent="HBoxContainer/NinePatchRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = -12.5
margin_right = 31.5
margin_bottom = 12.5
custom_fonts/font = ExtResource( 2 )
text = "20/30"

